<resources>
    <string name="app_name">Tour Guide</string>
    <string name="category_heritage">Heritage</string>
    <string name="category_eat">Eat</string>
    <string name="category_hospitals">Hospitals</string>
    <string name="category_hotels">Hotels</string>
    <string name="category_picnic">Picnic</string>
    <string name="category_shopping">Shopping</string>
    <string name="rajwada">Rajwada</string>
    <string name="rajwada_address">Rajwada, Indore, Madhya Pradesh 452002</string>
    <string name="rajwada_webaddress">Indo-Saracenic Revival architecture</string>
    <string name="rajwada_details">Rajwada is a historical palace in Indore city. It was built by the Holkars of the Maratha Empire about two centuries ago. This seven storied structure is located near the Chhatris and serves today as a fine example of royal grandeur and architectural skills.</string>
    <string name="lalbagh">Lal Bagh Palace</string>
    <string name="lalbagh_address">Nai Duniya, Revenue Colony, Indira nagar, Indore, Madhya Pradesh 452007</string>
    <string name="lalbagh_details"><![CDATA[Lavish 19th-century palace of the Holkar dynasty, in a mix of baroque, rococo & neoclassical styles.]]></string>
    <string name="museum">Indore Museum</string>
    <string name="museum_address">Near GPO Square, Navlakha, Indore, Madhya Pradesh 452001</string>
    <string name="museum_details">Indore Museum is museum situated in Indore in Madhya Pradesh state in India. It is located near the General Post Office in Indore.There are two galleries in the Museum.The artefacts exhibited in the museum range from the prehistoric to the modern era.It was established in 1929. It is also known as Central Museum.</string>
    <string name="zoo">Kamla Nehru Prani Sangrahalay</string>
    <string name="zoo_address">Agra Bombay Road, Navlakha, Indore, Madhya Pradesh 452001</string>
    <string name="zoo_details">Kamla Nehru Prani Sangrahalaya or Indore Zoo is a zoological garden located in Navlakha, Indore is fully owned and managed by Indore Municipal Corporation. This is the largest zoological garden of the state and one of the oldest zoological parks of Madhya Pradesh spread over an area of 4000 sq m.</string>
    <string name="khajrana">Khajrana Ganesh Temple</string>
    <string name="khajrana_address">Khajrana Main Rd, Khajrana Mandir, Ganeshpuri, Khajrana, Indore, Madhya Pradesh 452016</string>
    <string name="khajrana_details">Khajrana Ganesh Temple is a pilgrimage center in Indore, dedicated to Lord Ganpanti. Built during reign of Holkar dynasty.</string>
    <string name="annapurna">Annapurna Temple</string>
    <string name="annapurna_address">Annapurna Mandir, Kranti Kriplani Nagar, Indore, Madhya Pradesh 452009</string>
    <string name="annapurna_details"><![CDATA[Prominent temple dedicated to the Hindu goddess of food featuring an ornate gate & elephant statues.]]></string>
    <string name="bijasan">Bijasan Mata Temple Indore</string>
    <string name="bijasan_address">Devi Ahillyabai Holkar Airport Area, Indore, Madhya Pradesh 453112</string>
    <string name="bijasan_details">Bijasan is one of the temples of the Hindu goddess Durga, situated in Indore District of Madhya Pradesh, India.</string>
    <string name="gandhi_hall">Gandhi Hall</string>
    <string name="gandhi_hall_address">51, Mahatma Gandhi Rd, Shastri Market, New Siyaganj, Indore, Madhya Pradesh 452007</string>
    <string name="gandhi_hall_details"><![CDATA[Art & culture exhibitions in a 1904 hall with elaborate Indo-Gothic windows, minarets & domes.]]></string>
    <string name="chhatri">Krishna Pura Chhatri</string>
    <string name="chhatri_address">Mahatma Gandhi Road, Rajwada, Maharaja Tukoji Rao Holker Cloth Market, Indore, Madhya Pradesh 452007</string>
    <string name="chhatri_details"><![CDATA[Cenotaphs from the late 1800s memorializing Holkar rulers with wall carvings & statues.]]></string>
    <string name="gommatagiri">Gommatagiri Digambar Jain Temple</string>
    <string name="gommatagiri_address">Major district Road, Indore, Madhya Pradesh 257112</string>
    <string name="gommatagiri_details">Hindu temple with statues on a serene hilltop offering scenic views of the city.</string>
    <string name="white_church">White Church Indore</string>
    <string name="white_church_address">Pipliyahana Road, White Church Colony, Indore, Madhya Pradesh 452001</string>
    <string name="ranjeet_hanuman">Shri Ranjeet Hanuman Mandir</string>
    <string name="ranjeet_hanuman_address">Shri Ranjeet Hanuman Mandir Indore, Indore West, Footikothi Road, Gumasta Nagar, Scheme 71, Indore, Madhya Pradesh 452009</string>
    <string name="devguradia">Devguradia Temple</string>
    <string name="devguradia_address">Dudhia, Indore, Madhya Pradesh 452016</string>
    <string name="gopal_mandir">Gopal Mandir</string>
    <string name="gopal_mandir_address">120, Dhar Road, Rajwada, Indore, Madhya Pradesh 452002</string>
    <string name="harsiddhi">Harsiddhi Mata Temple</string>
    <string name="harsiddhi_address">Moti Tabela, Chhatribagh, Indore, Madhya Pradesh 452007</string>
    <string name="kanch_mandir">Kanch Mandir</string>
    <string name="kanch_mandir_address">Hukumchand Marg, Opposite Kaanch Mandir, Itwaria Bazaar, Indore, Madhya Pradesh 452002</string>
    <string name="poha_jalebi">Poha-Jalebi</string>
    <string name="chappan">Chappan Dukan</string>
    <string name="poha_jalebi_details">Indori poha (flattened rice) is a specialty that is served with a mountain of sev and pomegranate seeds as breakfast, along with jalebi. The jalebi in Indore is also a lighter version of the one available in Delhi, sans the colour and essence and made with a lighter sugar syrup. The poha-jalebi combination is unique to Indore and many shops in Chappan Dukan (a row of 56 shops) in New Palasia serve it early in the morning</string>
    <string name="dal_bafle">Dal Bafle</string>
    <string name="sarafa">Sarafa</string>
    <string name="dal_bafle_details">Dal Bafle is a close cousin of the Rajasthani dal baati churma. The Bafla is a oven baked ball made with wheat and semolina. It is crushed and dipped in ghee before being served. A light dal, churma (a powdered sweet), ladoos (made of rava or semolina), coriander-mint chutney and mango pickle are what accompany the bafla.</string>
    <string name="butta_kees">Bhutte Ka Kees</string>
    <string name="bhutta_kees_address">Joshi Dahi Bada House</string>
    <string name="bhutta_kees_details">Bhutte ki kees is an Indori delicacy, made with grated corn that is roasted in ghee, mixed with mild spices and garnished with coriander leaves and lemon juice before serving.</string>
    <string name="kachori">Indori Kachori</string>
    <string name="kachori_details">Kachoris are round dough balls stuffed with potatoes, onion, daal and served with coriander/mint chutney and sweet tamarind chutney. Best had at Vijay\'s outlet at Chappan chowk.</string>
    <string name="khichdi">Sabudna Khichdi</string>
    <string name="khichdi_details">Another popular local favourite, made of soaked tapioca. Especially eaten during festivals and fasting. Saawariya and Prashant\'s shops are famous for their sabudana khichdi.</string>
    <string name="dahi_vadas">Dahi Vadas</string>
    <string name="dahi_vadas_details">Deep-fried, savoury doughnuts dunked in curd till they become soft enough to melt in the mouth. Best sampled at Joshiji ke dahivade at Sarafa.</string>
    <string name="patties">Khopra patties</string>
    <string name="patties_details">Khopra Patties or Aloo Patties are potato balls, filled with coconut and deep fried. Vijay Chaat Bhandaar in Chappan is especially known for these.</string>
    <string name="garadu">Fried Garadu</string>
    <string name="garadu_details">Garadu is a root that is cut into cubes, deep-fried, almost doused in lemon juice and served with a garnish of fresh coriander leaves and a special chat masala. This is an Indori specialty - unlikely to be found elsewhere.</string>
    <string name="bhajiyas">Moong Dal bhajiyas</string>
    <string name="bhajiyas_details">Moong dal is soaked and ground along with mild spices, before being released as bite-sized balls into a pan of hot oil. The resultant pakodis are served with a fresh coriander-mint chutney. Perfect for an evening snack coupled with tea in an earthen kulhad.</string>
    <string name="namkeens">Indori Namkeens</string>
    <string name="namkeens_details">Indore\'s large variety of namkeens are almost as famous as the local food. Hing (asafoetida) sev and Laung (clove) sev are especially popular.</string>
    <string name="tikki">Aloo tikki</string>
    <string name="tikki_details">Mildly spiced, mashed potatoes are rolled into a ball, stuffed with a filling of daal, and then pan-fried. This aloo tikki is topped with curd and chutneys to make one of the most craving-worthy snacks that\'s served across most cities in the north of India.</string>
    <string name="chaat">Papdi Chat</string>
    <string name="chaat_details">Another common north-Indian chat item, papdi chaat is quite famous in Indore too. Crispy flour disks called papdis are combined with potatoes and chutneys to make a delectable dish.</string>
    <string name="greater_kailash">Greater Kailash Hospital</string>
    <string name="greater_kailash_address">11/2, Old Palasia, Near Palasia Thana, Indore, Madhya Pradesh 452018</string>
    <string name="greater_kailash_contact">0731 663 3333</string>
    <string name="greater_kailash_web">http://www.gkh.co.in/</string>
    <string name="greater_kailash_details">greater kailash hospital</string>
    <string name="macretina">Macretina Hospital</string>
    <string name="macretina_address">Shekhar central, 212, Agra Bombay Rd, Manorama Ganj, Indore, Madhya Pradesh 452001</string>
    <string name="macretina_contact">0731 249 8886</string>
    <string name="macretina_web">http://www.macretinahospital.com/</string>
    <string name="macretina_details">Hours:   Friday\t8AM–8PM Saturday\t8AM–8PM Sunday\tClosed Monday\t8AM–8PM Tuesday\t8AM–8PM Wednesday\t8AM–8PM Thursday\t8AM–8PM</string>
    <string name="bombay_hospital">Bombay Hospital</string>
    <string name="bomday_hospital_address">IDA Scheme No.94/95, Eastern Ring Road, Tulsi Nagar, Vijay Nagar, Indore, Madhya Pradesh 452010</string>
    <string name="bombay_hospital_contact">0731 255 8866</string>
    <string name="bombay_hospital_web">http://www.bombayhospitalindore.com/</string>
    <string name="bombay_hospital_details">Open 24 hours</string>
    <string name="chl">CHL Hospital Indore</string>
    <string name="chl_address">A.B. Road, Near L.I.G Square, Indore, Madhya Pradesh 452008</string>
    <string name="chl_contact">0731 477 4444</string>
    <string name="chl_web">http://www.chlhospitals.com/</string>
    <string name="chl_details">Open 24 hours</string>
    <string name="shalby">Shalby Hospital, Indore</string>
    <string name="shalby_address"><![CDATA[Part 5 & 6, R S bhandari Marg, Janjeerwala Square, Indore, Madhya Pradesh 452003]]></string>
    <string name="shalby_contact">0731 667 7777</string>
    <string name="shalby_web">https://www.shalby.org/</string>
    <string name="shalby_details">Open 24 hours</string>
    <string name="apollo_hospital">Apollo Hospitals</string>
    <string name="apollo_hospital_address">Scheme No. 74 C, Sector D, Vijay Nagar, Indore, Madhya Pradesh 452010</string>
    <string name="apollo_hospital_contact">0731 244 5566</string>
    <string name="apollo_hospital_web">https://www.apollohospitals.com/locations/india/indore</string>
    <string name="apollo_hospital_details">Open 24 hours</string>
    <string name="bapat_hospital">Bapat Hospital</string>
    <string name="description">Description : </string>
    <string name="country">Country : </string>
    <string name="state">State : </string>
    <string name="city">City : </string>
</resources>